--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "esbuild": "^0.18.11",
+    "esbuild-wasm": "0.18.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -26,6 +28,6 @@
     "postcss": "^8.4.25",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
-    "vite": "^4.4.0"
+    "vite": "^4.4.2"
   }
 }
