--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "esbuild": "^0.18.11",
     "esbuild-wasm": "0.18.11",
     "react": "^18.2.0",
