--- a/api/package.json
+++ b/api/package.json
@@ -28,8 +28,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jest": "^29.6.1",
     "mongodb": "^5.7.0",
     "nodemon": "^3.0.1"
+  },
+  "devDependencies": {
+    "jest": "^29.6.3"
   }
 }
